--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <ul class="nav_list">
             <li class="nav_li">
                 <img class="nav_img" src="img/card_siatmedia.jpg" alt="Siatmedia">
-                <div class="absolute bottom-0 width-full py-medium px-normal backdrop-blur-medium bg-white-transparent-01">
+                <div class="absolute bottom-0 width-full py-medium px-normal backdrop-blur-medium bg-white-transparent-01 flex-wrap-wrap">
                     <div class="nav_description">
-                        <i class='bx bxl-dropbox bx-tada bx-lg' style='color:#ffffff' ></i>
-                        <p class="shadow-text fz-18"> Tarea 1 <span>Siatmedia</span></p>
+                        <div class="flex-align-center">
+                            <i class='bx bxl-dropbox bx-tada bx-lg' style='color:#ffffff' ></i>
+                            <p class="shadow-text fz-18"> Tarea 1 <span>Siatmedia</span></p>
+                        </div>
                         <a class="nav_link" href="senati/tarea1/app/views/home/index.html">Ver Web</a>
                     </div>
                 </div>
