--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/index.html/" />
+    <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/index.html" />
     <meta name="google-site-verification" content="M0_CNYP0A-Kg5GfOWR_KM2S7cE_GO8izXzSIrVFVwmA" />
 </head>
 <body>
