--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="canonical" href="https://hunigolesan.github.io/hugo-senati/index.html" />
     <meta name="google-site-verification" content="M0_CNYP0A-Kg5GfOWR_KM2S7cE_GO8izXzSIrVFVwmA" />
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <header class="header">
